--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                   alt="instagram"
                   class="gmail"
                 />
-                @instagram_account
+                @aria__textile
               </li>
               <li class="slider__contacts-item">
                 <img
